# ridc

./: Doxyfile.in  License.txt  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
doc/source/: 0_installing.md
examples/brusselator_gsl/: Makefile.am  Makefile.in  brusselator.cpp  brusselator.h  driver.cpp  run.sh
examples/brusselator_mkl/: Makefile.am  Makefile.in  brusselator.cpp  brusselator.h  driver.cpp  run.sh
examples/brusselator_radau_mkl/: Makefile  Makefile.am  Makefile.in  brusselator.cpp  ode.h  radau.cpp  timing.sh
examples/explicit/: Makefile.am  Makefile.in  driver.cpp  explicit.cpp  run.sh
examples/explicit_nbody/: convergence.m  nbody.cpp  run.sh  todo.md
examples/implicit/: .driver.cpp.swp  Makefile.am  Makefile.in  driver.cpp  implicit.cpp  run.sh
examples/implicit_mkl/: Makefile.am  Makefile.in  driver.cpp  implicit.cpp  implicit.h  run.sh
src/: Makefile.am  Makefile.in  README  driver.cpp  ridc.cpp  ridc.h  ridc.mk  ridc_utils.cpp  ridc_utils.h
test/: README
test/brusselator_gsl/: Makefile  README  brusselator.cpp  convergence.m
test/brusselator_mkl/: Makefile  README  brusselator.cpp  ode.h  run.sh
test/explicit/: Makefile  README  ode.cpp  ode.h  run.sh
test/implicit/: Makefile  README  ode_implicit.cpp  run.sh
test/implicit_mkl/: Makefile  README  ode.h  ode_implicit.cpp  run.sh
test/reaction_diffusion/: Makefile  README  convergence.m  ode.h  reaction_diffusion.cpp  run.sh
